[package]
name = "rippa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = {version = "0.8.7", features = ["macros"]}
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "io-util"]}
zerocopy = {version = "0.8.30", features = ["derive"]}
